--- a/src/app/jobs-list/jobs-list.component.html
+++ b/src/app/jobs-list/jobs-list.component.html
@@ -209,6 +209,11 @@
           <button class="btn btn-reset w-100 mt-3" (click)="resetFilters()">
             Reset Filter
           </button>
+
+          <button class="btn apply-filter-btn w-100 mt-4" (click)="applyFilters()">
+            Apply Filters
+          </button>
+
         </div>
       </div>
 
