feat(jobs-list): restore search state on load and save search parameters to localStorage

--- a/src/app/jobs-list/jobs-list.component.html
+++ b/src/app/jobs-list/jobs-list.component.html
@@ -82,7 +82,7 @@
                       {{ jobType.label }}
                     </label>
                   </div>
-                  <!-- <span class="option-count">{{ jobType.count }}</span> -->
+                  <span class="option-count">5</span>
                 </div>
               </div>
             </div>
@@ -107,7 +107,7 @@
                       {{ experience.label }}
                     </label>
                   </div>
-                  <!-- <span class="option-count">{{ experience.count }}</span> -->
+                  <span class="option-count">5</span>
                 </div>
               </div>
             </div>
@@ -217,7 +217,7 @@
             </span>
             <span *ngIf="!isApplyingFilters">Apply Filters</span>
           </button>
-          
+
         </div>
       </div>
 
@@ -339,7 +339,7 @@
                           {{ jobType.label }}
                         </label>
                       </div>
-                      <!-- <span class="option-count">{{ jobType.count }}</span> -->
+                      <span class="option-count">5</span>
                     </div>
                   </div>
                 </div>
@@ -364,7 +364,7 @@
                           {{ experience.label }}
                         </label>
                       </div>
-                      <!-- <span class="option-count">{{ experience.count }}</span> -->
+                      <span class="option-count">5</span>
                     </div>
                   </div>
                 </div>
