--- a/src/app/jobs-list/jobs-list.component.html
+++ b/src/app/jobs-list/jobs-list.component.html
@@ -464,10 +464,10 @@
           </div> -->
 
               <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" (click)="resetFilters()">
+                <button type="button" class="btn btn-secondary" (click)="resetFiltersAndToggleModal()">
                   Reset
                 </button>
-                <button type="button" class="btn btn-primary" (click)="toggleAndApplyFiltersModal()">
+                <button type="button" class="btn btn-primary" (click)="applyFiltersAndToggleModal()">
                   Apply Filters
                 </button>
               </div>
